better timetable outputs